--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=IM+Fell+French+Canon:ital@0;1&display=swap');
 table {
     width: 60%;
     border-collapse: collapse;
@@ -17,7 +18,10 @@ table {
   .item4{grid-area: 2 / span 2;}
   .item5{grid-area: 3 / span 2;}
   .item6{grid-area: 3 / span 2;}
-
+.illustration2{
+    width:auto;
+    height:auto;
+}
    
    
     @media only screen and (min-width: 600px) {
@@ -130,7 +134,7 @@ height:auto;
        />
  
  
-  <h1>Bio<h1>
+  <h1><i>Bio</i><h1>
     <hr>
     <div class="bio">
 
@@ -140,7 +144,7 @@ height:auto;
             </div>
             <div class="item2">
                 <img
-          src="fkc logo blob.png"
+          src="https://drive.google.com/thumbnail?id=1NNTbWq4rbPjzU4KCw9ptovrpVRMlm0jT"
           class="illustration2"
           alt="king clark"
           width="100%"
@@ -151,7 +155,7 @@ height:auto;
 
             <div class="item3">
                 <img
-          src="fkc logo blob.png"
+          src="https://drive.google.com/thumbnail?id=1-a-fXbRtcCI-DG9d_6ML_ZQHfbzWc6mq"
           class="illustration2"
           alt="king clark"
           width="100%"
@@ -171,7 +175,7 @@ height:auto;
             </div>
             <div class="item6">
                 <img
-          src="fkc logo blob.png"
+          src="https://drive.google.com/thumbnail?id=1wNRApg2oNAAB-N-89oYw-9MYASwK-qg9"
           class="illustration2"
           alt="king clark"
           width="100%"
@@ -191,7 +195,7 @@ height:auto;
  <a href="https://www.youtube.com/@KingClarkNJ
  " class="fa fa-youtube"></a>
  <a href="https://www.instagram.com/foreverkingclark/" class="fa fa-instagram"></a>
- <a href="https://open.spotify.com/artist/3Iv5HnPLViCtNH8peJCkS4?si=Q-7GtHd6QTaQJ4xVkKwOdA" class="fa fa-spotify"></a>
+ <a href="https://open.spotify.com/artist/6zxFPdnxURt5gG8E4fkS6e?si=43673ec2c0914cf2" class="fa fa-spotify"></a>
      <a href="https://king-clark.bandcamp.com/music" class="fa fa-bandcamp"></a>
          <a href="https://music.apple.com/us/artist/forever-king-clark/1739131040" class="fa fa-apple"></a>
  
